--- a/app/views/common/_footer.html.erb
+++ b/app/views/common/_footer.html.erb
@@ -2,15 +2,15 @@
   <ul class="list-inline" style="margin:10px">
     <div class="container">
       <div class="row">
-        <li><div class="col-xs-12 col-md-8"></div></li>
+        <li><div class="col-xs-8 col-md-5"></div></li>
         <li>
           <div class="col-xs-3 col-md-2">
-          <%= link_to 'Help', help_path %>
+          <%= link_to 'ヘルプ', help_path %>
           </div>
         </li>
         <li>
           <div class="col-xs-3 col-md-2">
-            <%= link_to 'About', about_path %>
+            <%= link_to '概要', about_path %>
           </div>
         </li>
       </div>
