--- a/app/views/common/_header.html.erb
+++ b/app/views/common/_header.html.erb
@@ -4,11 +4,11 @@
       <div class="row">
         <li class="col-xs-1 col-md-1"></li>
         <li>
-          <div class="col-xs-6 col-md-4">
-            <%= link_to "Home", root_path, :class => "navbar-link" %>
+          <div class="col-xs-3 col-md-2">
+            <%= link_to "トップ", root_path, :class => "navbar-link" %>
           </div>
         </li>
-        <li class="col-xs-6 col-md-2"></li>
+        <li class="col-xs-4 col-md-2"></li>
         <% if user_signed_in? %>
           <li>
             <div class="col-xs-3 col-md-2">
@@ -23,12 +23,12 @@
         <% else %>
           <li>
             <div class="col-xs-3 col-md-2">
-              <%= link_to "Sign up", new_user_registration_path, :class => "navbar-link" %>
+              <%= link_to "登録", new_user_registration_path, :class => "navbar-link" %>
             </div>
           </li>
           <li>
             <div class="col-xs-3 col-md-2">
-              <%= link_to "Login", new_user_session_path, :class => "navbar-link" %>
+              <%= link_to "ログイン", new_user_session_path, :class => "navbar-link" %>
             </div>
           </li>
         <% end %>
