--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,13 +1,13 @@
 <div class="container">
-  <% if @user.id == current_user.id %>
-    <h3>Email</h3>
-    <p><%= @user.email %></p>
-    <br>
-    <h3>Name</h3>
-    <p>user_name</p>
-    <%= link_to "ユーザー情報を編集",edit_user_path(current_user.id), :class => "btn btn-primary withripple" %>
-  <% else %>
-    <h3>Name</h3>
-    <p>user_name</p>
+  <h3>Name</h3>
+  <p><%= "#{@user.family_name} #{@user.first_name}　" %>
+  <% if user_signed_in? %>
+    <% if @user.id == current_user.id %>
+      <%= link_to "ユーザー情報を編集",edit_user_path(current_user.id), :class => "btn btn-primary withripple" %>
+    <% end %>
   <% end %>
+  </p>
+  <div class="in_main_page">
+    <%= render 'common/main' %>
+  </div>
 </div>
