--- a/app/views/wears/create.html.erb
+++ b/app/views/wears/create.html.erb
@@ -1,4 +1,9 @@
 <div class="container">
-  <h2>登録が完了しました</h2>
-  <%= link_to "トップに戻る", root_path %>
+  <% if @wear.valid? %>
+    <h2>登録が完了しました</h2>
+    <%= link_to "トップに戻る", root_path %>
+  <% else %>
+    <h2>登録できませんでした</h2>
+    <%= link_to "戻る", new_wear_path %>
+  <% end %>
 </div>
