--- a/app/views/wears/new.html.erb
+++ b/app/views/wears/new.html.erb
@@ -1,12 +1,21 @@
-
+<% unless current_user.full_profile? %>
+  <h3>服の登録をする前に登録を終わらせてください</h3>
+  <%= link_to "プロフィールを登録する", edit_user_path(current_user), { :class => "btn btn-primary withripple" } %>
+<% else %>
 <div class="answer_page">
   <%= form_for(@wear) do |f| %>
     <h3>服を登録する</h3>
     <br>
     <div class="form-group">
+      <%= f.label "服の画像" %>
+      <%= f.file_field :avatar, :class => "form-control", placeholder: "画像アップロード" %>
+    </div>
+    <div class="form-group">
       <%= f.label "値段(円)/1ヶ月" %>
       <%= f.number_field :price, :class => "form-control"%>
     </div>
-      <%= f.submit "回答する", :class => "form-control" %>
+      <% f.hidden_field :user_id %>
+      <%= f.submit "登録する", :class => "btn btn-primary withripple" %>
   <% end %>
 </div>
+<% end %>
