--- a/app/views/wears/update.html.erb
+++ b/app/views/wears/update.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container text-center">
   <h2>編集しました</h2>
-  <%= link_to "トップに戻る", root_path %>
+  <%= link_to "トップに戻る", root_path, :class => "btn btn-primary withripple" %>
 </div>
