--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 body{
-  min-width:1100px;
+  min-width:1000px;
 }
 // mainPage
 .mainPage{
@@ -16,17 +16,18 @@ body{
     float:left;
     // 画像
     .wear_col{
-      width:120px;
-      height:150px;
+      width:150px;
+      height:250px;
       list-style-type:none;
       border:1px solid;
       padding:10px;
-      margin:10px 10px 0 0 ;
+      margin:10px 10px ;
       .icon_image {
         width: 100px;
         height: 100px;
         background-size: cover;
-        display: table-cell;
+        /*display: table-cell;*/
+        margin:0 auto;
       }
       p {
         text-align:center;
@@ -36,10 +37,10 @@ body{
   // 埋め込み signin
   .login_sec{
     float:left;
-    width:300px;
+    width:250px;
     .embed_sign_in{
-      width: 200px;
-      min-height: 200px;
+      min-width: 150px;
+      min-height: 250px;
       margin:10px 20px 20px 20px; // 上下右左
       border: 1px solid;
       padding:10px
@@ -68,7 +69,7 @@ header{
   position:fixed;
   margin-bottom:20px;
   height: 50px;
-  width:100%;
+  min-width:1200px;
   background-color:#D3D3D3;
   ul{
     margin:10px;
@@ -80,7 +81,7 @@ footer{
   margin-top:20px;
   border-top: 1px solid;
   height:50px;
-  width:100%;
+  min-width:1200px;
   ul{
     margin:10px;
   }
