--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,24 @@
       });
   </script>
 
+  <script>
+  window.fbAsyncInit = function() {
+    FB.init({
+      appId      : '989141801152712',
+      xfbml      : true,
+      version    : 'v2.5'
+    });
+  };
+
+  (function(d, s, id){
+     var js, fjs = d.getElementsByTagName(s)[0];
+     if (d.getElementById(id)) {return;}
+     js = d.createElement(s); js.id = id;
+     js.src = "//connect.facebook.net/en_US/sdk.js";
+     fjs.parentNode.insertBefore(js, fjs);
+   }(document, 'script', 'facebook-jssdk'));
+  </script>
+
   <%= render 'common/header' %>
 
   <div class="mainPage">
@@ -21,6 +39,13 @@
     <%= render 'common/nolert' %>
 
     <%= yield %>
+
+    <div
+      class="fb-like"
+      data-share="true"
+      data-width="450"
+      data-show-faces="true">
+    </div>
 
   </div>
 
