--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,10 +1,27 @@
 <div class="answer_page">
   <% if @user.id == current_user.id %>
-    <%= form_for current_user do |f| %>
+    <%= form_for @user do |f| %>
       <h2>登録情報</h2><br>
       <div class="form-group">
-        <%= f.text_field :family_name, placeholder: "姓", :class => "form-control" %><br>
-        <%= f.text_field :first_name , placeholder: "名", :class => "form-control" %><br>
+        <div class="field">
+          <%= f.label "苗字" %>
+          <%= f.text_field :family_name, placeholder: "姓", :class => "form-control" %>
+        </div>
+        <br>
+        <div class="field">
+          <%= f.label "名前" %>
+          <%= f.text_field :first_name , placeholder: "名", :class => "form-control" %>
+        </div>
+        <br>
+        <div class="field">
+          <%= f.label "区町村" %>
+          <%= f.collection_select :ward_id , Ward.all, :id, :name, {:selected => @ward.id}, {:class => "form-control"} %>
+        </div><br>
+        <div class="field">
+          <%= f.label "駅名"%>
+          <%= render partial: 'stations', locals: { ward_id: @ward.id} %>
+        </div>
+        <br>
       </div>
       <div class="form-group">
         <%= f.submit "送信", :class => "btn btn-primary withripple" %>
